@@ -3126,8 +3126,8 @@ FIELDS|sysmapid|name         |width|height|backgroundid|label_type|label_locatio
 ROW   |1       |Local network|680  |200   |NULL        |0         |0             |1        |1            |1           |0         |50       |1        |1         |0           |2              |2                   |2                 |2             |2               |                 |                      |                    |                |                  |NULL     |1            |0           |
 
 TABLE |sysmaps_elements
-FIELDS|selementid|sysmapid|elementid|elementtype|iconid_off|iconid_on|label                      |label_location|x  |y |iconid_disabled|iconid_maintenance|elementsubtype|areatype|width|height|viewtype|use_iconmap|
-ROW   |1         |1       |10084    |0          |185       |NULL     |{HOST.NAME}&eol;{HOST.CONN}|0             |111|61|NULL           |NULL              |0             |0       |200  |200   |0       |0          |
+FIELDS|selementid|sysmapid|elementid|elementtype|iconid_off|iconid_on|label                      |label_location|x  |y |iconid_disabled|iconid_maintenance|elementsubtype|areatype|width|height|viewtype|use_iconmap|application|
+ROW   |1         |1       |10084    |0          |185       |NULL     |{HOST.NAME}&eol;{HOST.CONN}|0             |111|61|NULL           |NULL              |0             |0       |200  |200   |0       |0          |           |
 
 TABLE |regexps
 FIELDS|regexpid|name                              |test_string|
