@@ -769,6 +769,7 @@ FIELD		|width		|t_integer	|'200'	|NOT NULL	|ZBX_SYNC
 FIELD		|height		|t_integer	|'200'	|NOT NULL	|ZBX_SYNC
 FIELD		|viewtype	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|use_iconmap	|t_integer	|'1'	|NOT NULL	|ZBX_SYNC
+FIELD		|application	|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC
 INDEX		|1		|sysmapid
 INDEX		|2		|iconid_off
 INDEX		|3		|iconid_on
@@ -1300,4 +1301,4 @@ INDEX		|2		|templateid
 TABLE|dbversion||
 FIELD		|mandatory	|t_integer	|'0'	|NOT NULL	|
 FIELD		|optional	|t_integer	|'0'	|NOT NULL	|
-ROW		|2030010	|2030010
+ROW		|2030011	|2030011
