@@ -512,7 +512,10 @@ table.suggest tr td { text-align: left; padding-left: 4px; line-height: 2.2em; f
 	margin: 0 0 0 4px; padding: 2px 0 0 4px; top: 0; left: 0; min-height: 14px; position: absolute; z-index: 10;
 	background: none; border: none; outline: none;
 }
-.multiselect .selected ul { padding: 0 0 0 1px; min-height: 18px; background: #ffffff; border: 1px solid #AAAAAA; }
+.multiselect .selected ul {
+	padding: 0 0 0 1px; margin: 0; min-height: 18px;
+	background: #ffffff; border: 1px solid #AAAAAA;
+}
 .multiselect .selected ul.active {
 	-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 	border: 1px solid #5897FB;
