@@ -18,6 +18,7 @@ New features:
 A......... [ZBX-7345] removed deprecated API features (Pavels)
 
 Bug fixes:
+A.F.I..... [ZBXNEXT-2124] implemented an application filter for host and host group map elements (Pavels)
 ....I..... [ZBX-7109] removed unused fields in trigger_discovery table (Sasha)
 ....I..... [ZBX-7168] fixed configure.ac template to properly link libcurl to all components independently (Juris)
 A......... [ZBX-4772] fixed possibility to pass incorrect host status value (Ivo)
